--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,46 @@
+# Byte-compiled / optimized / DLL files:
 __pycache__/
-env/
 .pytest_cache/
-.vscode
-.env
 *.pyc    
 *.log
+*.py[cod]
+*$py.class
+# C extensions:
+*.so
+*.so
+# Distribution / packaging:
+build/
+dist/
+*.egg-info/
+*.egg
+# Virtual environment:
+.env
+env/
+venv/
+ENV/
+.venv/
+.env/
+# Unit test / coverage reports:
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+# Jupyter Notebook:
+.ipynb_checkpoints
+# IDEs and editors:
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+# PyInstaller:
+*.manifest
+*.spec
+# Logs and local config:
+*.log
+*.sqlite3
+*.db
+.DS_Store
